issue vm refactor, settings dialog overflow changes

--- a/client/src/styles/dialogs/_settings.scss
+++ b/client/src/styles/dialogs/_settings.scss
@@ -1,3 +1,4 @@
 .settings-content {
   height: 50vh;
+  overflow-y: auto
 }
